Webpack changes to support refresh browser after every change on files

--- a/src/pages/google/index.html
+++ b/src/pages/google/index.html
@@ -26,6 +26,17 @@
   <meta name="descriptionFb" property="og:description" content="Google.com page created using css grid layout." />
 </head>
 <body>
-  <p>XergioAleX</p>
+  <div class="container">
+    <header></header>
+    <div class="content">
+      <p>XergioAleX123</p>
+      <figure class="logo">
+
+      </figure>
+    </div>
+    <footer>
+
+    </footer>
+  </div>
 </body>
 </html>
