Final setup for webpack configs

--- a/src/pages/google/index.html
+++ b/src/pages/google/index.html
@@ -27,9 +27,11 @@
 </head>
 <body>
   <div class="container">
-    <header></header>
+    <header>
+
+    </header>
     <div class="content">
-      <p>XergioAleX123</p>
+      <p>XergioAleX12345</p>
       <figure class="logo">
 
       </figure>
