Webpack config improvements supporting url-loader

--- a/src/pages/google/index.html
+++ b/src/pages/google/index.html
@@ -31,9 +31,9 @@
 
     </header>
     <div class="content">
-      <p>XergioAleX12345</p>
+      <p>XergioAleX123456a</p>
       <figure class="logo">
-
+        <img src="assets/images/google-logo.png" alt="Google Logo">
       </figure>
     </div>
     <footer>
