--- a/src/pages/google/index.html
+++ b/src/pages/google/index.html
@@ -28,7 +28,22 @@
 <body>
   <div class="container">
     <header>
-
+      <nav>
+        <div class="nav-item">
+          <a href="#">
+            Gmail
+          </a>
+        </div>
+        <div class="nav-item">
+          Images
+        </div>
+        <div class="nav-item">
+          Grid
+        </div>
+        <div class="nav-item avatar">
+          <img src="../../images/user_profile.jpg" alt="Movies Logo" class="avatar">
+        </div>
+      </nav>
     </header>
     <div class="content">
       <p>XergioAleX123456a</p>
