Base layout for google page && styles changes

--- a/src/pages/google/index.html
+++ b/src/pages/google/index.html
@@ -35,21 +35,32 @@
           </a>
         </div>
         <div class="nav-item">
-          Images
+          <a href="#">
+            Images
+          </a>
         </div>
-        <div class="nav-item">
-          Grid
+        <div class="nav-item nav-menu">
+          <img src="../../images/icons/nav_menu_black.svg" alt="Nav Menu Icon">
         </div>
         <div class="nav-item avatar">
-          <img src="../../images/user_profile.jpg" alt="Movies Logo" class="avatar">
+          <img src="../../images/user_profile.jpg" alt="User Profile Avatar">
         </div>
       </nav>
     </header>
     <div class="content">
-      <p>XergioAleX123456a</p>
-      <figure class="logo">
-        <img src="assets/images/google-logo.png" alt="Google Logo">
-      </figure>
+      <section>
+        <figure class="logo">
+          <img src="assets/images/google-logo.png" alt="Google Logo" width="272">
+        </figure>
+        <div class="form-search">
+          <div class="form-group">
+            <div class="input-wrapper">
+              <img src="../../images/icons/search_black.svg" alt="Search Icon" class="search-icon">
+              <input type="text">
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
     <footer>
 
