Desktop version for Google page finished.

--- a/src/pages/google/index.html
+++ b/src/pages/google/index.html
@@ -59,11 +59,39 @@
               <input type="text">
             </div>
           </div>
+
+          <div class="buttons">
+            <a href="#">
+              Google Search
+            </a>
+            <a href="#">
+              I'm Feeling Lucky
+            </a>
+          </div>
+
+          <div class="extra-language-info">
+            <p>Google offered in: <a href="#">Español (Latinoamérica)</a></p>
+          </div>
         </div>
       </section>
     </div>
     <footer>
-
+      <section class="section-country">
+        Colombia
+      </section>
+      <section class="section-links">
+        <div class="general-links">
+          <a href="#">About</a>
+          <a href="#">Advertising</a>
+          <a href="#">Business</a>
+          <a href="#">How Search works</a>
+        </div>
+        <div class="privacy-links">
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+          <a href="#">Settings</a>
+        </div>
+      </section>
     </footer>
   </div>
 </body>
